--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=avr-timer-lib
 version=1.1.1
 author=Rob Mertens 
 maintainer=Rob Mertens
-sentence=This library provides classes for avr timers.
-paragraph=This library provides classes for avr timers.
+sentence=This library provides functions for avr-atmega2560-timers.
+paragraph=This library provides functions for avr-atmega2560-timers.
 category=Signal Input/Output
-url=
+url=https://github.com/RobMertens/avrtimerlib
 architectures=avr
