--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
-[*/*.{h, hpp, cpp, ino}]
+[*.{h, hpp, cpp, ino}]
 charset = utf-8
 indent_style = tab
 indent_size = 4
